@@ -638,10 +638,10 @@ decl_c ::= decl_c_astp = {
   (typename_flag_opt) = false,
   (type_c_ast) = {
     sname = "",
-    unique_id = 1327,
+    unique_id = 1332,
     kind = "built-in type",
     depth = 0,
-    parent->unique_id = 1328,
+    parent->unique_id = -1,
     loc = 8-10,
     type = "int" (btid = 0x2001, stid = 0x2, atid = 0x4),
     bit_width = 0
