@@ -1853,10 +1853,10 @@ decl_c ::= decl_c_astp = {
   (typename_flag_opt) = false,
   (type_c_ast) = {
     sname = "",
-    unique_id = 1327,
+    unique_id = 1344,
     kind = "built-in type",
     depth = 0,
-    parent->unique_id = 1343,
+    parent->unique_id = -1,
     loc = 8-11,
     type = "void" (btid = 0x11, stid = 0x2, atid = 0x4),
     bit_width = 0
