@@ -1,0 +1,1 @@
+cdecl @ @ @ explain int (*p), (*q) @ 0
